--- a/css/chosen.css
+++ b/css/chosen.css
@@ -82,6 +82,7 @@ border-top: solid 1px #eee;
   width: 100%;
   height: 100%;
   margin-top: 2px;
+  margin-left: 5px;
 }
 .chzn-container-single .chzn-search {
   padding: 3px 4px;
